    everything is working properly right now.
  * Parent Tasks displayed differently than the leaf tasks (on paar with the
    other gantt charts).
  * Gantt chart in User Detail page is now showing the parent tasks of the
    tasks of the user.
  * Now there are two different context menus for container/parent tasks and
    leaf tasks.

0.2.0.a9
--------
* A new property called ``to_tjp`` added to the SimpleEntity class which needs
  to be implemented in the child and is going to be used in TaskJuggler
  integration.

* A new attribute called ``is_scheduled`` added to Task class and it is going
  to be used in Gantt charts. Where it will lock the class and will not try
  to snap it to anywhere if it is scheduled.

* Changed the ``resolution`` attribute name to ``timing_resolution`` to comply
  with TaskJuggler.

* ScheduleMixin:
  * Updated ScheduleMixin class documentation.
  * There are two new read-only attributes called ``computed_start`` and
    ``computed_end``. These attributes will be used in storing of the values
    calculated by TaskJuggler, and will be used in Gantt Charts if available.
  * Added ``computed_duration``.
  
* Task:
  * Arranged the TaskJuggler workflow.
  * The task will use the effort > length > duration attributes in `to_tjp`
    property.

* Changed the license of Stalker from BSD-2 to LGPL 2.1. Any version previous
  to 0.2.0.a9 will be still BSD-2 and any version from and including 0.2.0.a9
  will be distributed under LGPL 2.1 license.

* Added new types of classes called Schedulers which are going to be used in
  scheduling the tasks.

* Added TaskJugglerScheduler, it uses the given project and schedules its
  tasks.

0.2.0.a8
--------

* TagSelect now can be filled by setting its ``value`` attribute (Ex:
  TagSelect.set('value', data))
  
* Fixed Projects menu in base.jinja2, the link is now updating correctly when a
  new project is added.

* Added a new method called ``is_root`` to Task class. It is true for tasks